<resources>
    <string name="app_name">MyConcert</string>
    <string name="register">Registration</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="exit">Are you sure you want to exit?</string>
    <string name="sHome">Find your next concert!</string>
    <string name="loading_photo">Loading photo....</string>
    <string name="mail" translatable="false">E-mail</string>
    <string name="password">Password</string>
    <string name="confirmpass">Confirm Password:</string>
    <string name="signup">SIGN UP</string>
    <string name="artist">Artist</string>
    <string name="venues">Venues</string>
    <string name="find">Find</string>
    <string name="login">LOGIN</string>
    <string name="pass">Password</string>
    <string name="us">Username</string>
    <string name="condizione">OR</string>
    <string name="fb">Sign up with Facebook</string>
    <string name="facebook_app_id" translatable="false">135655866842118</string>
    <string name="nomeArtista">Artist:</string>
    <string name="nomeCanzone">Title:</string>
    <string name="nomeVenue">Venue:</string>
    <string name="nomeCitta">City:</string>
    <string name="data">Date:</string>
    <string name="nosongs">No songs avaible...</string>
    <string name="nameartist">Artist name: </string>
    <string name="surnameartist">Artist surname: </string>
    <string name="aliasartist">Alias: </string>
    <string name="topfive">Most loved songs: </string>
    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="benvenuto">Welcome</string>
    <string name="si">Yes</string>
    <string name="no">No</string>
    <string name="home">HOME</string>
    <string name="concertiAttivi">NEXT CONCERTS</string>
    <string name="preferiteDaiFan">FAVOURITE SONGS</string>
    <string name="schermiGrandi">TWITTER</string>
    <string name="atten">Attention</string>
    <string name="presente">Song Already Present</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="databreve" translatable="false">aaaa-mm-gg</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="not_logged">You are not logged on Twitter.</string>
    <!-- Questa string non è da modificare in italiano  -->
    <string name="partecipero_preferences">PREFERENCES_CONCERT</string>
    <string name="insertplaylist">Your playlist has been sent correctly</string>
    <string name="errorplaylist">Your playlist has not been sent correctly</string>
    <string name="need">Need an account?</string>
    <string name="registrati">SIGN UP NOW</string>
    <string name="search">Search</string>
    <string name="setlistmy">My SetList</string>
    <string name="concert">Concerts</string>
    <string name="areuartist">Are you an artist?</string>
    <string name="signinartist">Sign in</string>
    <string name="pres">Nothing to show  :(</string>
    <string-array name="opzioni">
        <item>@string/search</item>
        <item>@string/setlistmy</item>
        <item>@string/concert</item>
    </string-array>

    <string name="open">Drawer Opened</string>
    <string name="close">Drawer Closed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="luogoConc">Your next concert is in </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="scopri">discover exactly where !</string>
    <string name="noConc">You have no concert!</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="closea">Close</string>
    <string name="Venues">Venues not found</string>
    <string name="VenuesDescr">No venues foung with this name</string>
    <string name="Artist">Artist not found</string>
    <string name="ArtistDescr">No Artist found with this name</string>
    <string name="NoConn">No connection found</string>
    <string name="AttConn">Enable connection</string>
    <string name="Imp">Settings</string>
    <string name="Autentication">Autentication issue</string>
    <string name="AutenticationDescr">Wrong Username-Password combination</string>
    <string name="loading">loading...</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_user_avabile">This user don\'t exist</string>
    <string name="applicazionIDDeezer" translatable="false">182722</string>
    <string name="add_song">Add song</string>
    <string name="signinyes">Signed Up Successfully</string>
    <string name="signinno">Signed Up Not Successfully</string>
    <string name="cancel_song">Undo</string>
    <string name="add_songtitle">Add song title</string>
    <string name="title_activity_splash_scrren" translatable="false">My Concert</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="title_activity_concert_live_big_screen">ConcertLiveBigScreen</string>
</resources>
