<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardCornerRadius="2dp"
    android:id="@+id/cv"
    android:layout_margin="10dp"
    android:background="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativ"
            android:background="?android:selectableItemBackground"
            android:padding="16dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomeArtista"
                android:id="@+id/nom"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textNameArtistItemList"
                android:layout_marginStart="100dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomeVenue"
                android:layout_below="@id/nom"
                android:id="@+id/ven"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:id="@+id/textNameVenueItemList"
                android:layout_below="@+id/textNameArtistItemList"

                 />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomeCitta"
                android:layout_below="@id/ven"
                android:id="@+id/cit"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textNameCityItemList"
                android:layout_below="@id/textNameVenueItemList"
                android:layout_marginStart="100dp"
                 />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:layout_below="@id/cit"
                android:id="@+id/dat"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textDataItemList"
                android:layout_below="@id/textNameCityItemList"
                android:layout_marginStart="100dp"
                />
        </RelativeLayout>


</android.support.v7.widget.CardView>