<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/find">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtarti"
        android:text="@string/artist"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="81dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtVenu"
        android:text="@string/venues"
        android:layout_below="@+id/artist_name_search"
        android:layout_alignLeft="@+id/txtarti"
        android:layout_alignStart="@+id/txtarti"
        android:layout_marginTop="67dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/artist_name_search"
        android:layout_below="@+id/txtarti"
        android:layout_toLeftOf="@+id/imageView2"
        android:layout_toStartOf="@+id/imageView2"
        android:layout_marginTop="47dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/venue_name_search"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/txtVenu"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_search_black_24dp"

        android:layout_alignBottom="@+id/txtarti"
        android:layout_toRightOf="@+id/artist_name_search"
        android:layout_toEndOf="@+id/artist_name_search" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/ic_search_black_24dp"

        android:layout_alignBottom="@+id/txtVenu"
        android:layout_toRightOf="@+id/venue_name_search"
        android:layout_toEndOf="@+id/venue_name_search" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/find"
        android:id="@+id/textView7"
        android:layout_marginTop="36dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:text="@string/find"
        android:id="@+id/search_button"
        android:background="@drawable/rounded_bttn"
        android:textColor="@color/white"
        android:elevation="5dp"
        android:layout_marginBottom="34dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
